fixed collapse animation

--- a/style.css
+++ b/style.css
@@ -178,8 +178,8 @@ body {
 
 .rotated-icon {
   transition-duration: var(--transition-duration);
-  -webkit-transform: rotate(180deg);
-  transform: rotate(180deg);
+  -webkit-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
 }
 
 #sidebarAdd,
@@ -207,37 +207,6 @@ body {
     display: none !important;
   }
 
-}
-
-/* ANIMATED CHEVRON */
-
-.animated-chevron {
-  display: inline-block;
-  position: relative;
-  margin: 0 1rem;
-}
-.animated-chevron span {
-  top: 0.5rem;
-  position: absolute;
-  width: 0.75rem;
-  height: 0.1rem;
-  background-color: #efefef;
-  display: inline-block;
-  transition: all 0.2s ease;
-}
-.animated-chevron span:first-of-type {
-  left: 0;
-  transform: rotate(45deg);
-}
-.animated-chevron span:last-of-type {
-  right: 0;
-  transform: rotate(-45deg);
-}
-.animated-chevron.active span:first-of-type {
-  transform: rotate(-45deg);
-}
-.animated-chevron.active span:last-of-type {
-  transform: rotate(45deg);
 }
 
 /* ANIMATED BURGER */
